# perceptive_legged_control

./: readme.md
OCS2_ws/.catkin_tools/profiles/debug/: build.yaml  devel_collisions.txt
OCS2_ws/.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
OCS2_ws/src/freeAny_description/: CMakeLists.txt  freeany.rviz  package.xml  test_world
OCS2_ws/src/freeAny_description/common/: BP_lidar.xacro  camera.xacro  gazebo.xacro  imu.xacro  leg.xacro  materials.xacro  transmission.xacro
OCS2_ws/src/freeAny_description/config/: default.yaml  joint_names_freeAny.yaml
OCS2_ws/src/freeAny_description/launch/: display.launch  gazebo.launch  stair.world  test2.world  test_environment1.world
OCS2_ws/src/freeAny_description/meshes/: BP_lidar.STL  HIP.STL  IMU.STL  battery.STL  foot.STL  shank_Left.STL  shank_Right.STL  thigh.STL
OCS2_ws/src/freeAny_description/urdf/: const.xacro  freeAny.urdf  robot.urdf  robot.xacro
OCS2_ws/src/grid_map/grid_map_demos/scripts/: image_publisher.py
OCS2_ws/src/hpp-fcl/: CMakeLists.txt
OCS2_ws/src/legged_control/legged_controllers/launch/: load_controller.launch
OCS2_ws/src/legged_control/legged_controllers/src/: LeggedController.cpp
OCS2_ws/src/legged_control/legged_gazebo/worlds/: terrain.world  terrain2.world
OCS2_ws/src/legged_perceptive/legged_perceptive_controllers/config/: default.yaml  rviz.rviz
OCS2_ws/src/legged_perceptive/legged_perceptive_controllers/launch/: convex.launch  elevation_mapping_custom.launch  load_controller.launch
OCS2_ws/src/legged_perceptive/legged_perceptive_description/urdf/: sensor_t265.xacro
OCS2_ws/src/legged_perceptive/legged_perceptive_description_custom/: CMakeLists.txt  package.xml
OCS2_ws/src/legged_perceptive/legged_perceptive_interface/: CMakeLists.txt
OCS2_ws/src/ocs2/ocs2_ddp/src/: DDP_HelperFunctions.cpp  SLQ.cpp
OCS2_ws/src/perceptive_trajectories/src/: PoseCommandToCostDesiredRos.cpp  ReferenceExtrapolation.cpp
OCS2_ws/src/pinocchio/: CMakeLists.txt
OCS2_ws/src/plot_terrain/: CMakeLists.txt  package.xml
OCS2_ws/src/plot_terrain/config/c_series/: node.yaml
OCS2_ws/src/plot_terrain/launch/: convex.launch
OCS2_ws/src/plot_terrain/src/: ConvexPlaneDecomposition.cpp
perceptive_ocs2_ws/.catkin_tools/profiles/debug/: config.yaml  devel_collisions.txt
perceptive_ocs2_ws/.catkin_tools/profiles/default/: config.yaml  devel_collisions.txt
perceptive_ocs2_ws/src/legged_perceptive_description/launch/: empty_world.launch
perceptive_ocs2_ws/src/legged_perceptive_description_custom/launch/: empty_world.launch
perceptive_ocs2_ws/src/legged_perceptive_description_custom/urdf/: robot.xacro
perceptive_ocs2_ws/src/ocs2_legged_estimation/: CMakeLists.txt  package.xml
perceptive_ocs2_ws/src/ocs2_legged_estimation/include/ocs2_legged_estimation/: FromTopiceEstimate.h  LinearKalmanFilter.h  StateEstimateBase.h
perceptive_ocs2_ws/src/ocs2_legged_estimation/src/: FromTopicEstimate.cpp  LinearKalmanFilter.cpp  StateEstimateBase.cpp
perceptive_ocs2_ws/src/ocs2_legged_self_collishion/: CMakeLists.txt  package.xml
perceptive_ocs2_ws/src/ocs2_legged_self_collishion/src/: SelfCollisionConstraint.cpp  ocs2_legged_self_collishion.cpp
perceptive_ocs2_ws/src/ocs2_legged_wbc/: CMakeLists.txt  package.xml
perceptive_ocs2_ws/src/ocs2_legged_wbc/include/ocs2_legged_wbc/: HierarchicalWbc.h  HoQp.h  Task.h  WbcBase.h  WeightedWbc.h
perceptive_ocs2_ws/src/ocs2_legged_wbc/src/: HierarchicalWbc.cpp  HoQp.cpp  WbcBase.cpp  WeightedWbc.cpp
perceptive_ocs2_ws/src/ocs2_legged_wbc/test/: HoQp_test.cpp
perceptive_ocs2_ws/src/ocs2_unitree_controllers/: CMakeLists.txt  ocs2_unitree_controllers_plugins.xml  package.xml
perceptive_ocs2_ws/src/ocs2_unitree_controllers/config/: controllers.yaml
perceptive_ocs2_ws/src/ocs2_unitree_controllers/config/aliengo/: task.info
perceptive_ocs2_ws/src/ocs2_unitree_controllers/include/ocs2_unitree_controllers/: ocs2_perceptiveControll.h
perceptive_ocs2_ws/src/ocs2_unitree_controllers/launch/: load_controller.launch  unitree.launch
perceptive_ocs2_ws/src/ocs2_unitree_controllers/src/: ocs2_perceptiveControll.cpp
perceptive_ocs2_ws/src/ocs2_unitree_loopshaping_mpc/: CMakeLists.txt  package.xml
perceptive_ocs2_ws/src/ocs2_unitree_loopshaping_mpc/config/unitree/: demo_config.rviz  targetCommand.info  task.info
perceptive_ocs2_ws/src/ocs2_unitree_loopshaping_mpc/include/ocs2_unitree_loopshaping_mpc/: UnitreeLoopshapingInterface.h
perceptive_ocs2_ws/src/ocs2_unitree_loopshaping_mpc/launch/: desCmd.launch  perceptive_mpc_demo.launch  unitree.launch
perceptive_ocs2_ws/src/ocs2_unitree_loopshaping_mpc/src/: PerceptiveMpcDemo.cpp  UnitreeLoopshapingDummyMrt.cpp  UnitreeLoopshapingInterface.cpp  UnitreeLoopshapingMpcNode.cpp
perceptive_ocs2_ws/src/ocs2_unitree_models/: CMakeLists.txt  package.xml
perceptive_ocs2_ws/src/ocs2_unitree_models/src/: FrameDeclaration.cpp  QuadrupedCom.cpp  QuadrupedInverseKinematics.cpp  QuadrupedKinematics.cpp  QuadrupedPinocchioMapping.cpp  UnitreeModels.cpp
perceptive_ocs2_ws/src/ocs2_unitree_mpc/: CMakeLists.txt  package.xml
perceptive_ocs2_ws/src/ocs2_unitree_mpc/config/unitree/: frame_declaration.info  targetCommand.info  task.info
perceptive_ocs2_ws/src/ocs2_unitree_mpc/include/ocs2_unitree_mpc/: UnitreeInterface.h
perceptive_ocs2_ws/src/ocs2_unitree_mpc/include/ocs2_unitree_mpc/visualization/: LeggedSelfCollisionVisualization.h
perceptive_ocs2_ws/src/ocs2_unitree_mpc/launch/: unitree copy.launch  unitree.launch
perceptive_ocs2_ws/src/ocs2_unitree_mpc/src/: UnitreeDummyMRT.cpp  UnitreeInterface.cpp  UnitreeMpcNode.cpp
perceptive_ocs2_ws/src/perceptive_trajectories/: CMakeLists.txt  package.xml
perceptive_ocs2_ws/src/perceptive_trajectories/src/: AnymalPoseCommandNode.cpp  PoseCommandToCostDesiredRos.cpp
perceptive_ocs2_ws/src/plot_terrain/: CMakeLists.txt
perceptive_ocs2_ws/src/plot_terrain/launch/: convex.launch  perceptive_mpc_demo.launch
perceptive_ocs2_ws/src/plot_terrain/src/: ConvexPlaneDecomposition.cpp  plot_terrain.cpp
stepping_stones_terrain/: model.config  model.sdf
(+181 files in other folders)
