<package format="2">
  <name>freeAny_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for freeAny</p>
    <p>This package contains configuration data, 3D models and launch files for freeAny robot</p>
  </description>

  <author>CYZ</author>
  <maintainer email="476582111@qq.com" />
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
  
</package>