<?xml version="1.0"?>
<package format="2">
    <name>ocs2_legged_estimation</name>
    <version>0.0.0</version>
    <description>The ocs2_legged_estimation packages.</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>ocs2_pinocchio_interface</depend>
    <depend>legged_common</depend>
    <depend>realtime_tools</depend>
    <depend>tf2_ros</depend>
    <depend>ocs2_switched_model_interface</depend>
    <depend>ocs2_robotic_tools</depend>

</package>
