<?xml version="1.0"?>
<package format="2">
    <name>ocs2_legged_wbc</name>
    <version>0.0.0</version>
    <description>Whole body control</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>

    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>ocs2_pinocchio_interface</depend>
    <depend>qpoases_catkin</depend>
    <depend>pinocchio</depend>
    <depend>ocs2_unitree_models</depend>
    <depend>ocs2_robotic_tools</depend>

    
    <!-- <depend>ocs2_quadruped_interface</depend> -->
</package>
