<?xml version="1.0"?>
<package format="2">
  <name>ocs2_unitree_mpc</name>
  <version>0.0.0</version>
  <description>The ocs2_unitree_mpc package</description>

  <maintainer email="farbod@todo.todo">farbod</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslib</depend>
  <depend>ocs2_unitree_models</depend>
  <depend>ocs2_quadruped_interface</depend>
  <depend>ocs2_legged_self_collishion</depend>
  <depend>ocs2_self_collision_visualization</depend>


  <exec_depend>ocs2_unitree_commands</exec_depend>

</package>
